# ROS_PACKAGES

./: CMakeLists.txt  package.xml
begginer_tutorials/scripts/: listener.py  talker.py
foobar/: package.xml
learning_tf2/: package.xml
learning_tf2/launch/: start_demo.launch
learning_tf2/nodes/: dynamic_tf2_broadcaster.py  fixed_tf2_broadcaster.py  static_turtle_tf2_broadcaster.py  turtle_tf2_listener.py
lidar2lines/: CMakeLists.txt  package.xml
lidar2lines/src/: lidar2lines_node.cpp
motion_from_camera/: CMakeLists.txt  package.xml
motion_from_camera/src/: motion_from_camera_node.cpp
move_base_plugins/: CMakeLists.txt  move_base_global_planners_plugin.xml  package.xml
move_base_plugins/launch/: bringup_roomba.launch  bringup_roomba2.launch  bringup_turtle.launch  laby.launch  move_base.launch
move_base_plugins/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
move_base_plugins/rviz_files/: rviz.rviz
move_base_plugins/src/: ompl_global_planner.cpp  ompl_global_planner.hpp
move_base_plugins/world/: laby01.pgm  laby01.world  laby01.xml  laby01.yaml  maze01.pgm  maze01.world  maze01.yaml
museum_guide/src/: explorer_node.cpp
museum_guide/world/: map_01.yaml  map_02.yaml  museum_small_01.xml  museum_small_02.xml
random_walk-package/random_walk/: CMakeLists.txt  package.xml
random_walk-package/random_walk/launch/: building.inc  coppelia_rndw_1pioneer.launch  coppelia_rndw_2pioneer.launch  coppelia_rndw_4pioneer.launch  real_pioneer_rndw.launch  stage_rndw_1pioneer_building.launch  stage_rndw_2pioneer_building.launch  stage_teleop_1pioneer_building.launch
random_walk-package/random_walk/src/: random_walk.cpp
rc_amcl/rc_amcl/: CMakeLists.txt  package.xml
rc_amcl/rc_amcl/launch/: 2pioneer_building.world  8pioneer_building.world  amcl_building.launch  building.inc  stage_amcl_building.launch  stage_amcl_building_2robots.launch  stage_amcl_building_8robots.launch  (+3 more)
robotformations/robotformations/: CMakeLists.txt
stage_tutorial/: CMakeLists.txt  package.xml
stage_tutorial/launch/: autonomous.launch  gmapping.launch  teleop.launch
stage_tutorial/robots/: crobot.inc  simple_robot.inc
stage_tutorial/src/: reactive_navigation.cpp
stage_tutorial/worlds/: rooms.world
(+12 files in other folders)
